# ecdsatool

./: Makefile  README.md  buildsys.mk.in  cap_sasl.pl  configure.ac  example-for-cap_sasl.pl
libecdsaauth/: Makefile  base64.c  keypair.c  op.c  op.h
tool/: Makefile  main.c  tool-applet.h
